<resources>
    <string name="skip">Skip</string>
    <string name="app_name">Bloom</string>
    <string name="str_start">Start</string>
    <string name="str_end">Stop</string>

    <string name="good_morning">Good morning!</string>
    <string name="title_activity_meditation">MeditationActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="quote">Brilliant things happen in calm minds. Be calm. You\'re brilliant.</string>

    <string name="lbl_firstname">First Name</string>geno
    <string name="lbl_lastname">Last Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_confirmpassword">Confirm password</string>
    <string name="btn_add">Create User</string>
    <string name="lbl_login_email">Email:</string>
    <string name="lbl_login_password">Password:</string>
    <string name="btn_login">Log In</string>
    <string name="idTVLogin">Already a User ? Login Here</string>
    <string name="registerTV">Sign Up! Click here</string>
    <string name="yoga_desc">Letting go is the hardest asana.</string>
    <string name="breathing_desc">Breathing is the greatest \npleasure in life.</string>
    <string name="meditation_desc">The act of meditation is being spacious.</string>
    <string name="str_times_meditate">times meditated</string>
    <string name="str_min_meditate">minutes meditated</string>
    <string name="str_times_breathe">times done breathing exercise</string>
    <string name="str_min_breathe">minutes done breathing exercise</string>

    <string name="str_motivate">You are doing great. Go ahead!!</string>
    <string-array name="minutes">
        <item>20:00 minutes</item>
        <item>10:00 minutes</item>
    </string-array>
</resources>