<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.HomeFragment">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/good_morning"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody1"
                android:text="@string/quote"
                android:paddingRight="100dp"
                android:lineHeight="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"/>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:clickable="true"
                android:focusable="true"
                android:checkable="true"
                app:cardCornerRadius="16dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/darkgray"
                android:outlineAmbientShadowColor="@color/black"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Start Meditating"
                        android:layout_marginBottom="8dp"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="120dp"
                        android:text="@string/meditation_desc"
                        android:lineHeight="20sp"
                        android:textAppearance="?attr/textAppearanceBody2" />
                </LinearLayout>
                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/medlotteinhome"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    android:layout_marginRight="-50dp"
                    app:lottie_rawRes="@raw/med"
                    android:layout_gravity="right|center_vertical"
                    tools:ignore="MissingConstraints"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/breathe"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:clickable="true"
                android:focusable="true"
                android:checkable="true"
                app:cardCornerRadius="16dp"
                android:backgroundTint="@color/lightgreen"
                android:outlineAmbientShadowColor="@color/green_700"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Breathing exercise"
                        android:layout_marginBottom="8dp"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="100dp"
                        android:lineHeight="20sp"
                        android:text="@string/breathing_desc"
                        android:textAppearance="?attr/textAppearanceBody2" />
                </LinearLayout>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/bretlotteinmain"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/bret"
                    android:layout_marginRight="-50dp"
                    android:layout_gravity="right|center_vertical"
                    tools:ignore="MissingConstraints"/>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/yoga123"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:clickable="true"
                android:focusable="true"
                android:checkable="true"
                app:cardCornerRadius="16dp"
                android:backgroundTint="@color/purple_200"
                android:outlineAmbientShadowColor="@color/green_700"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Yoga and Calisthenic"
                        android:layout_marginBottom="8dp"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="100dp"
                        android:lineHeight="20sp"
                        android:text="@string/yoga_desc"
                        android:textAppearance="?attr/textAppearanceBody2" />
                </LinearLayout>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/yogalotteinmain"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/yg"
                    android:layout_marginRight="-50dp"
                    android:layout_gravity="right|center_vertical"
                    tools:ignore="MissingConstraints"/>
            </com.google.android.material.card.MaterialCardView>

            <include layout="@layout/report" android:id="@+id/id" />




            <com.google.android.material.button.MaterialButton
                android:id="@+id/remind"
                android:layout_width="180dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                app:cornerRadius="24dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:backgroundTint="@color/black"
                android:text="Set Reminder" />
        </LinearLayout>
    </ScrollView>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/breatheView"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginRight="-125dp"
        android:layout_marginTop="-10dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/leaf"
        android:layout_gravity="right|top"
        tools:ignore="MissingConstraints"/>
</FrameLayout>